# app/Http/Controllers/HotelController.php
@@ -9,7 +9,46 @@ use App\Models\Hotel;
 
 class HotelController extends Controller
 {
-    // TODO: AGREGAR DOC swagger
+    /**
+     * @OA\Get(
+     ** path="/api/hotels",
+      *   tags={"Hotels"},
+      *   summary="Get all hotels",
+      *   description="Get all hotels",
+      *   operationId="",
+      *
+      *   @OA\Response(
+      *      response=200,
+      *       description="Success",
+      *      @OA\MediaType(
+      *           mediaType="application/json",
+      *      )
+      *   ),
+      *   @OA\Response(
+      *      response=401,
+      *       description="Unauthenticated"
+      *   ),
+      *   @OA\Response(
+      *      response=400,
+      *      description="Bad Request"
+      *   ),
+      *   @OA\Response(
+      *      response=404,
+      *      description="Not found"
+      *   ),
+      *   @OA\Response(
+      *      response=403,
+      *      description="Forbidden"
+      *   ),
+      *   security={{"bearerAuth":{}}}
+      *)
+      **/
+
+    /**
+     * get all hotels api.
+     *
+     * @return \Illuminate\Http\Response
+     */
     public function index()
     {
       try {
@@ -21,6 +60,55 @@ class HotelController extends Controller
       }
     }
 
+    /**
+     * @OA\Get(
+     ** path="/api/hotels/{id}",
+    *   tags={"Hotels"},
+    *   summary="Find hotel id",
+    *   description="Find hotel id",
+    *   operationId="id",
+    *
+    *   @OA\Parameter(
+    *      name="id",
+    *      in="path",
+    *      required=true,
+    *      @OA\Schema(
+    *           type="integer",
+    *      )
+    *   ),
+    *   @OA\Response(
+    *      response=200,
+    *       description="Success",
+    *      @OA\MediaType(
+    *           mediaType="application/json",
+    *      )
+    *   ),
+    *   @OA\Response(
+    *      response=401,
+    *       description="Unauthenticated"
+    *   ),
+    *   @OA\Response(
+    *      response=400,
+    *      description="Bad Request"
+    *   ),
+    *   @OA\Response(
+    *      response=404,
+    *      description="Not found"
+    *   ),
+    *   @OA\Response(
+    *      response=403,
+    *      description="Forbidden"
+    *   ),
+    *   security={{"bearerAuth":{}}}
+    *)
+    * @param mixed $id
+    **/
+
+    /**
+     * Hotel find api.
+     *
+     * @return \Illuminate\Http\Response
+     */
     public function find(Request $request)
     {
       try {
@@ -37,6 +125,54 @@ class HotelController extends Controller
       }
     }
 
+    /**
+     * @OA\Post(
+     ** path="/api/hotels",
+    *   tags={"Hotels"},
+    *   summary="Create hotels",
+    *   description="Create hotels",
+    *   operationId="",
+    *
+    * @OA\Parameter(
+    *      name="name",
+    *      in="query",
+    *      required=true,
+    *      @OA\Schema(
+    *           type="string"
+    *      )
+    *   ),
+    *   @OA\Response(
+    *      response=200,
+    *       description="Success",
+    *      @OA\MediaType(
+    *           mediaType="application/json",
+    *      )
+    *   ),
+    *   @OA\Response(
+    *      response=401,
+    *       description="Unauthenticated"
+    *   ),
+    *   @OA\Response(
+    *      response=400,
+    *      description="Bad Request"
+    *   ),
+    *   @OA\Response(
+    *      response=404,
+    *      description="Not found"
+    *   ),
+    *   @OA\Response(
+    *      response=403,
+    *      description="Forbidden"
+    *   ),
+    *   security={{"bearerAuth":{}}}
+    *)
+    **/
+
+    /**
+     * Hotels create api.
+     *
+     * @return \Illuminate\Http\Response
+     */
     public function store(CreateHotelRequest $request)
     {
       try {
@@ -50,6 +186,54 @@ class HotelController extends Controller
       }
     }
 
+    /**
+     * @OA\Delete(
+     ** path="/api/hotels/{id}",
+    *   tags={"Hotels"},
+    *   summary="Delete hotels for id",
+    *   description="Delete hotels for id",
+    *   operationId="id",
+    *
+    * @OA\Parameter(
+    *      name="id",
+    *      in="query",
+    *      required=true,
+    *      @OA\Schema(
+    *           type="integer"
+    *      )
+    *   ),
+    *   @OA\Response(
+    *      response=200,
+    *       description="Success",
+    *      @OA\MediaType(
+    *           mediaType="application/json",
+    *      )
+    *   ),
+    *   @OA\Response(
+    *      response=401,
+    *       description="Unauthenticated"
+    *   ),
+    *   @OA\Response(
+    *      response=400,
+    *      description="Bad Request"
+    *   ),
+    *   @OA\Response(
+    *      response=404,
+    *      description="Not found"
+    *   ),
+    *   @OA\Response(
+    *      response=403,
+    *      description="Forbidden"
+    *   ),
+    *   security={{"bearerAuth":{}}}
+    *)
+    **/
+
+    /**
+     * Hotels delete api.
+     *
+     * @return \Illuminate\Http\Response
+     */
     public function remove(Request $request)
     {
       try {
